--- a/package.json
+++ b/package.json
@@ -34,8 +34,9 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0",
     "prettier": "^2.2.1",
-    "sass": "^1.26.5",
-    "sass-loader": "^8.0.2",
+    "sass": "^1.48.0",
+    "sass-loader": "^10.2.1",
+    "style-resources-loader": "^1.5.0",
     "typescript": "~4.1.5",
     "vue-eslint-parser": "^8.0.1"
   }
