--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mdi/js": "^6.5.95",
     "axios": "^0.24.0",
+    "mdi-vue": "^3.0.12",
     "twitch-cli": "^0.0.2",
     "vue": "^3.0.0",
     "vue-axios": "^3.4.0",
