--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@babel/core": "^7.16.7",
     "@babel/eslint-parser": "^7.16.5",
+    "@fullhuman/postcss-purgecss": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
@@ -35,7 +36,11 @@
     "eslint": "^4.19.1",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0",
+    "glob-all": "^3.2.1",
+    "path": "^0.12.7",
     "prettier": "^2.2.1",
+    "purgecss": "^4.1.3",
+    "purgecss-webpack-plugin": "^4.1.3",
     "sass": "^1.48.0",
     "sass-loader": "^10.2.1",
     "style-resources-loader": "^1.5.0",
