--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "sourceMap": true,
+    "noImplicitAny": false,
     "baseUrl": ".",
     "types": [
       "webpack-env"
@@ -31,7 +32,7 @@
     "src/**/*.ts",
     "src/**/*.tsx",
     "tests/**/*.ts",
-    "tests/**/*.tsx", "src/main.js", "src/main.js"  ],
+    "tests/**/*.tsx", "src/main.js", "src/main.js", "src/router/index.js"  ],
   "exclude": [
     "node_modules"
   ]
